[package]
name = "pakket"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "CLI for tracking shipments"
license = "MIT"
repository = "https://github.com/rvben/pakket"
homepage = "https://github.com/rvben/pakket"
keywords = ["tracking", "shipment", "cli", "dhl", "postnl"]
categories = ["command-line-utilities"]

[[bin]]
name = "pakket"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
owo-colors = "4"
dirs = "6"
thiserror = "2"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
